--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         padding: 0;
         box-sizing: border-box;
       }
+    
     </style>
     <link
       rel="stylesheet"
@@ -48,7 +49,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
